--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .aaa img {
     width: 100%;
 }
-.aaa .more_inf {
+.aaa .more-inf {
     font-family: fantasy, cursive;
 }
 
@@ -122,15 +122,18 @@ li > label {
 li >    input[type="text"] {
     width: 226px
 }
-li > button.delete:hover {
+li > button
+.delete:hover {
     color: #cf2323;
 }
-button.delete img {
+button.delete 
+img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete 
+img:hover {
     transform: rotateZ(0);
 }
 
@@ -145,11 +148,11 @@ ul li input[type=text] {
     display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
     display:none;
 }
