--- a/style.css
+++ b/style.css
@@ -4,25 +4,25 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.info {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.info img {
     width: 100%;
 }
-.aaa .more-inf {
+.info .more-inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-    .aaa { 
+    .info { 
         text-align: center;
     }
 }
-.centered-main-page-element {
+.content {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -123,16 +123,16 @@ li >    input[type="text"] {
     width: 226px
 }
 li > button
-.delete:hover {
+.delete-btn:hover {
     color: #cf2323;
 }
-button.delete 
+button.delete-btn 
 img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete 
+button.delete-btn
 img:hover {
     transform: rotateZ(0);
 }
