--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
     width: 318px;
 }
 p > button:hover {
@@ -119,20 +119,19 @@ li > label {
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
     width: 226px
 }
-li > button
 .delete-btn:hover {
     color: #cf2323;
 }
-button.delete-btn 
+.delete-btn 
 img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete-btn
+.delete-btn
 img:hover {
     transform: rotateZ(0);
 }
